# SPDX-FileCopyrightText: 2022 - 2023 Peter Urban, Ghent University
#
# SPDX-License-Identifier: CC0-1.0

# -- library setup --
libname   = projectnamespace + '_echosounders'
headerdir = projectnamespace + '/echosounders'

# -- source files --
sources = [
]

headers = [
  'kongsbergall/datagrams.hpp',
  'kongsbergall/kongsbergallamplitudeconverter.hpp',
  'kongsbergall/kongsbergallfilehandler.hpp',
  'kongsbergall/types.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallannotationdatainterface.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallannotationdatainterfaceperfile.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallconfigurationdatainterface.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallconfigurationdatainterfaceperfile.hpp',
  'kongsbergall/filedatainterfaces/kongsbergalldatagramdatainterface.hpp',
  'kongsbergall/filedatainterfaces/kongsbergalldatagramdatainterfaceperfile.hpp',
  'kongsbergall/filedatainterfaces/kongsbergalldatagraminterface.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallenvironmentdatainterface.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallenvironmentdatainterfaceperfile.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallnavigationdatainterface.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallnavigationdatainterfaceperfile.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallotherfiledatainterface.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallotherfiledatainterfaceperfile.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallpingdatainterface.hpp',
  'kongsbergall/filedatainterfaces/kongsbergallpingdatainterfaceperfile.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallannotationdatainterface.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallannotationdatainterfaceperfile.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallconfigurationdatainterface.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallconfigurationdatainterfaceperfile.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergalldatagramdatainterface.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergalldatagramdatainterfaceperfile.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergalldatagraminterface.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallenvironmentdatainterface.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallenvironmentdatainterfaceperfile.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallnavigationdatainterface.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallnavigationdatainterfaceperfile.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallotherfiledatainterface.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallotherfiledatainterfaceperfile.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallpingdatainterface.doc.hpp',
  'kongsbergall/filedatainterfaces/.docstrings/kongsbergallpingdatainterfaceperfile.doc.hpp',
  'kongsbergall/.docstrings/datagrams.doc.hpp',
  'kongsbergall/.docstrings/kongsbergallamplitudeconverter.doc.hpp',
  'kongsbergall/.docstrings/kongsbergallfilehandler.doc.hpp',
  'kongsbergall/.docstrings/types.doc.hpp',
  'kongsbergall/datagrams/attitudedatagram.hpp',
  'kongsbergall/datagrams/clockdatagram.hpp',
  'kongsbergall/datagrams/depthorheightdatagram.hpp',
  'kongsbergall/datagrams/extradetections.hpp',
  'kongsbergall/datagrams/extraparameters.hpp',
  'kongsbergall/datagrams/headingdatagram.hpp',
  'kongsbergall/datagrams/installationparameters.hpp',
  'kongsbergall/datagrams/kongsbergalldatagram.hpp',
  'kongsbergall/datagrams/kongsbergallunknown.hpp',
  'kongsbergall/datagrams/networkattitudevelocitydatagram.hpp',
  'kongsbergall/datagrams/positiondatagram.hpp',
  'kongsbergall/datagrams/puidoutput.hpp',
  'kongsbergall/datagrams/pustatusoutput.hpp',
  'kongsbergall/datagrams/qualityfactordatagram.hpp',
  'kongsbergall/datagrams/rawrangeandangle.hpp',
  'kongsbergall/datagrams/runtimeparameters.hpp',
  'kongsbergall/datagrams/seabedimagedata.hpp',
  'kongsbergall/datagrams/singlebeamechosounderdepth.hpp',
  'kongsbergall/datagrams/soundspeedprofiledatagram.hpp',
  'kongsbergall/datagrams/surfacesoundspeeddatagram.hpp',
  'kongsbergall/datagrams/watercolumndatagram.hpp',
  'kongsbergall/datagrams/xyzdatagram.hpp',
  'kongsbergall/datagrams/substructures/attitudedatagramattitude.hpp',
  'kongsbergall/datagrams/substructures/extradetectionsdetectionclasses.hpp',
  'kongsbergall/datagrams/substructures/extradetectionsextradetections.hpp',
  'kongsbergall/datagrams/substructures/flag_detection_information.hpp',
  'kongsbergall/datagrams/substructures/networkattitudevelocitydatagramattitude.hpp',
  'kongsbergall/datagrams/substructures/rawrangeandanglebeam.hpp',
  'kongsbergall/datagrams/substructures/rawrangeandangletransmitsector.hpp',
  'kongsbergall/datagrams/substructures/sampleamplitudesstructure.hpp',
  'kongsbergall/datagrams/substructures/seabedimagedatabeam.hpp',
  'kongsbergall/datagrams/substructures/watercolumndatagrambeam.hpp',
  'kongsbergall/datagrams/substructures/watercolumndatagramtransmitsector.hpp',
  'kongsbergall/datagrams/substructures/xyzdatagrambeam.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/attitudedatagramattitude.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/extradetectionsdetectionclasses.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/extradetectionsextradetections.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/flag_detection_information.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/networkattitudevelocitydatagramattitude.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/rawrangeandanglebeam.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/rawrangeandangletransmitsector.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/sampleamplitudesstructure.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/seabedimagedatabeam.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/watercolumndatagrambeam.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/watercolumndatagramtransmitsector.doc.hpp',
  'kongsbergall/datagrams/substructures/.docstrings/xyzdatagrambeam.doc.hpp',
  'kongsbergall/datagrams/.docstrings/attitudedatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/clockdatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/depthorheightdatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/extradetections.doc.hpp',
  'kongsbergall/datagrams/.docstrings/extraparameters.doc.hpp',
  'kongsbergall/datagrams/.docstrings/headingdatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/installationparameters.doc.hpp',
  'kongsbergall/datagrams/.docstrings/kongsbergalldatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/kongsbergallunknown.doc.hpp',
  'kongsbergall/datagrams/.docstrings/networkattitudevelocitydatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/positiondatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/puidoutput.doc.hpp',
  'kongsbergall/datagrams/.docstrings/pustatusoutput.doc.hpp',
  'kongsbergall/datagrams/.docstrings/qualityfactordatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/rawrangeandangle.doc.hpp',
  'kongsbergall/datagrams/.docstrings/runtimeparameters.doc.hpp',
  'kongsbergall/datagrams/.docstrings/seabedimagedata.doc.hpp',
  'kongsbergall/datagrams/.docstrings/singlebeamechosounderdepth.doc.hpp',
  'kongsbergall/datagrams/.docstrings/soundspeedprofiledatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/surfacesoundspeeddatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/watercolumndatagram.doc.hpp',
  'kongsbergall/datagrams/.docstrings/xyzdatagram.doc.hpp',
  'kongsbergall/filedatacontainers/kongsbergalldatagramcontainer.hpp',
  'kongsbergall/filedatacontainers/kongsbergallpingcontainer.hpp',
  'kongsbergall/filedatacontainers/.docstrings/kongsbergalldatagramcontainer.doc.hpp',
  'kongsbergall/filedatacontainers/.docstrings/kongsbergallpingcontainer.doc.hpp',
  'kongsbergall/filedatatypes/kongsbergallping.hpp',
  'kongsbergall/filedatatypes/kongsbergallpingbottom.hpp',
  'kongsbergall/filedatatypes/kongsbergallpingcommon.hpp',
  'kongsbergall/filedatatypes/kongsbergallpingfiledata.hpp',
  'kongsbergall/filedatatypes/kongsbergallpingwatercolumn.hpp',
  'kongsbergall/filedatatypes/cache_structures/fileinfos.hpp',
  'kongsbergall/filedatatypes/cache_structures/.docstrings/fileinfos.doc.hpp',
  'kongsbergall/filedatatypes/cache_structures/.docstrings/filepackagecache.doc.hpp',
  'kongsbergall/filedatatypes/cache_structures/.docstrings/filepackageindex.doc.hpp',
  'kongsbergall/filedatatypes/cache_structures/.docstrings/packagecachebuffer.doc.hpp',
  'kongsbergall/filedatatypes/.docstrings/kongsbergallping.doc.hpp',
  'kongsbergall/filedatatypes/.docstrings/kongsbergallpingbottom.doc.hpp',
  'kongsbergall/filedatatypes/.docstrings/kongsbergallpingcommon.doc.hpp',
  'kongsbergall/filedatatypes/.docstrings/kongsbergallpingfiledata.doc.hpp',
  'kongsbergall/filedatatypes/.docstrings/kongsbergallpingwatercolumn.doc.hpp',
  'kongsbergall/filedatatypes/_sub/systeminformation.hpp',
  'kongsbergall/filedatatypes/_sub/watercolumninformation.hpp',
  'kongsbergall/filedatatypes/_sub/.docstrings/systeminformation.doc.hpp',
  'kongsbergall/filedatatypes/_sub/.docstrings/watercolumninformation.doc.hpp',
  '.docstrings/kongsbergallfilehandler.doc.hpp',
  '.docstrings/simradrawfilehandler.doc.hpp',
  'simradraw/datagrams.hpp',
  'simradraw/simradrawfilehandler.hpp',
  'simradraw/types.hpp',
  'simradraw/filedatainterfaces/simradrawannotationdatainterface.hpp',
  'simradraw/filedatainterfaces/simradrawannotationdatainterfaceperfile.hpp',
  'simradraw/filedatainterfaces/simradrawconfigurationdatainterface.hpp',
  'simradraw/filedatainterfaces/simradrawconfigurationdatainterfaceperfile.hpp',
  'simradraw/filedatainterfaces/simradrawdatagramdatainterface.hpp',
  'simradraw/filedatainterfaces/simradrawdatagramdatainterfaceperfile.hpp',
  'simradraw/filedatainterfaces/simradrawdatagraminterface.hpp',
  'simradraw/filedatainterfaces/simradrawenvironmentdatainterface.hpp',
  'simradraw/filedatainterfaces/simradrawenvironmentdatainterfaceperfile.hpp',
  'simradraw/filedatainterfaces/simradrawnavigationdatainterface.hpp',
  'simradraw/filedatainterfaces/simradrawnavigationdatainterfaceperfile.hpp',
  'simradraw/filedatainterfaces/simradrawotherfiledatainterface.hpp',
  'simradraw/filedatainterfaces/simradrawotherfiledatainterfaceperfile.hpp',
  'simradraw/filedatainterfaces/simradrawpingdatainterface.hpp',
  'simradraw/filedatainterfaces/simradrawpingdatainterfaceperfile.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawannotationdatainterface.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawannotationdatainterfaceperfile.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawconfigurationdatainterface.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawconfigurationdatainterfaceperfile.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawdatagramdatainterface.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawdatagramdatainterfaceperfile.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawdatagraminterface.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawenvironmentdatainterface.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawenvironmentdatainterfaceperfile.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawnavigationdatainterface.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawnavigationdatainterfaceperfile.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawotherfiledatainterface.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawotherfiledatainterfaceperfile.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawpingdatainterface.doc.hpp',
  'simradraw/filedatainterfaces/.docstrings/simradrawpingdatainterfaceperfile.doc.hpp',
  'simradraw/.docstrings/datagrams.doc.hpp',
  'simradraw/.docstrings/simradrawfilehandler.doc.hpp',
  'simradraw/.docstrings/types.doc.hpp',
  'simradraw/datagrams/FIL1.hpp',
  'simradraw/datagrams/MRU0.hpp',
  'simradraw/datagrams/NME0.hpp',
  'simradraw/datagrams/RAW3.hpp',
  'simradraw/datagrams/TAG0.hpp',
  'simradraw/datagrams/XML0.hpp',
  'simradraw/datagrams/simradrawdatagram.hpp',
  'simradraw/datagrams/simradrawunknown.hpp',
  'simradraw/datagrams/.docstrings/FIL1.doc.hpp',
  'simradraw/datagrams/.docstrings/MRU0.doc.hpp',
  'simradraw/datagrams/.docstrings/NME0.doc.hpp',
  'simradraw/datagrams/.docstrings/RAW3.doc.hpp',
  'simradraw/datagrams/.docstrings/TAG0.doc.hpp',
  'simradraw/datagrams/.docstrings/XML0.doc.hpp',
  'simradraw/datagrams/.docstrings/simradrawdatagram.doc.hpp',
  'simradraw/datagrams/.docstrings/simradrawunknown.doc.hpp',
  'simradraw/datagrams/xml_datagrams/channelconfiguration.hpp',
  'simradraw/datagrams/xml_datagrams/helper.hpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration.hpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_sensor.hpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_sensor_telegram.hpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_sensor_telegramvalue.hpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_transceiver.hpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_transceiver_channel.hpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_transceiver_channel_frequencypar.hpp',
  'simradraw/datagrams/xml_datagrams/xml_configuration_transducer.hpp',
  'simradraw/datagrams/xml_datagrams/xml_environment.hpp',
  'simradraw/datagrams/xml_datagrams/xml_environment_transducer.hpp',
  'simradraw/datagrams/xml_datagrams/xml_initialparameter.hpp',
  'simradraw/datagrams/xml_datagrams/xml_node.hpp',
  'simradraw/datagrams/xml_datagrams/xml_parameter.hpp',
  'simradraw/datagrams/xml_datagrams/xml_parameter_channel.hpp',
  'simradraw/datagrams/xml_datagrams/xml_pingsequence.hpp',
  'simradraw/datagrams/xml_datagrams/xml_pingsequence_ping.hpp',
  'simradraw/datagrams/xml_datagrams/xml_sensor.hpp',
  'simradraw/datagrams/xml_datagrams/xmlconfigurationactivepingmode.hpp',
  'simradraw/datagrams/xml_datagrams/xmlconfigurationtransceiverchanneltransducer.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/channelconfiguration.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/helper.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_configuration.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_configuration_sensor.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_configuration_sensor_telegram.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_configuration_sensor_telegramvalue.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_configuration_transceiver.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_configuration_transceiver_channel.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_configuration_transceiver_channel_frequencypar.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_configuration_transducer.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_environment.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_environment_transducer.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_initialparameter.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_node.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_parameter.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_parameter_channel.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_pingsequence.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_pingsequence_ping.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xml_sensor.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xmlconfigurationactivepingmode.doc.hpp',
  'simradraw/datagrams/xml_datagrams/.docstrings/xmlconfigurationtransceiverchanneltransducer.doc.hpp',
  'simradraw/datagrams/raw3datatypes/i_raw3data.hpp',
  'simradraw/datagrams/raw3datatypes/raw3dataangle.hpp',
  'simradraw/datagrams/raw3datatypes/raw3datacomplexfloat32.hpp',
  'simradraw/datagrams/raw3datatypes/raw3datapower.hpp',
  'simradraw/datagrams/raw3datatypes/raw3datapowerandangle.hpp',
  'simradraw/datagrams/raw3datatypes/raw3dataskipped.hpp',
  'simradraw/datagrams/raw3datatypes/raw3datatypes.hpp',
  'simradraw/datagrams/raw3datatypes/t_raw3datatype.hpp',
  'simradraw/datagrams/raw3datatypes/.docstrings/i_raw3data.doc.hpp',
  'simradraw/datagrams/raw3datatypes/.docstrings/raw3dataangle.doc.hpp',
  'simradraw/datagrams/raw3datatypes/.docstrings/raw3datacomplexfloat32.doc.hpp',
  'simradraw/datagrams/raw3datatypes/.docstrings/raw3datapower.doc.hpp',
  'simradraw/datagrams/raw3datatypes/.docstrings/raw3datapowerandangle.doc.hpp',
  'simradraw/datagrams/raw3datatypes/.docstrings/raw3dataskipped.doc.hpp',
  'simradraw/datagrams/raw3datatypes/.docstrings/raw3datatypes.doc.hpp',
  'simradraw/datagrams/raw3datatypes/.docstrings/t_raw3datatype.doc.hpp',
  'simradraw/filedatacontainers/simradrawfiledatacontainers.hpp',
  'simradraw/filedatacontainers/.docstrings/simradrawfiledatacontainers.doc.hpp',
  'simradraw/filedatatypes/simradrawping.hpp',
  'simradraw/filedatatypes/simradrawpingcommon.hpp',
  'simradraw/filedatatypes/simradrawpingfiledata.hpp',
  'simradraw/filedatatypes/.docstrings/simradrawping.doc.hpp',
  'simradraw/filedatatypes/.docstrings/simradrawpingcommon.doc.hpp',
  'simradraw/filedatatypes/.docstrings/simradrawpingfiledata.doc.hpp',
  'filetemplates/i_inputfilehandler.hpp',
  'filetemplates/internal/inputfilemanager.hpp',
  'filetemplates/internal/.docstrings/inputfilemanager.doc.hpp',
  'filetemplates/datacontainers/datagramcontainer.hpp',
  'filetemplates/datacontainers/pingcontainer.hpp',
  'filetemplates/datacontainers/.docstrings/datagramcontainer.doc.hpp',
  'filetemplates/datacontainers/.docstrings/pingcontainer.doc.hpp',
  'filetemplates/.docstrings/i_inputfilehandler.doc.hpp',
  'filetemplates/datastreams/mappedfilestream.hpp',
  'filetemplates/datastreams/.docstrings/mappedfilestream.doc.hpp',
  'filetemplates/datainterfaces/i_annotationdatainterface.hpp',
  'filetemplates/datainterfaces/i_annotationdatainterfaceperfile.hpp',
  'filetemplates/datainterfaces/i_configurationdatainterface.hpp',
  'filetemplates/datainterfaces/i_configurationdatainterfaceperfile.hpp',
  'filetemplates/datainterfaces/i_datagraminterface.hpp',
  'filetemplates/datainterfaces/i_environmentdatainterface.hpp',
  'filetemplates/datainterfaces/i_environmentdatainterfaceperfile.hpp',
  'filetemplates/datainterfaces/i_filedatainterface.hpp',
  'filetemplates/datainterfaces/i_filedatainterfaceperfile.hpp',
  'filetemplates/datainterfaces/i_navigationdatainterface.hpp',
  'filetemplates/datainterfaces/i_navigationdatainterfaceperfile.hpp',
  'filetemplates/datainterfaces/i_pingdatainterface.hpp',
  'filetemplates/datainterfaces/i_pingdatainterfaceperfile.hpp',
  'filetemplates/datainterfaces/.docstrings/i_annotationdatainterface.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_annotationdatainterfaceperfile.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_configurationdatainterface.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_configurationdatainterfaceperfile.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_datagraminterface.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_environmentdatainterface.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_environmentdatainterfaceperfile.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_filedatainterface.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_filedatainterfaceperfile.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_navigationdatainterface.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_navigationdatainterfaceperfile.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_pingdatainterface.doc.hpp',
  'filetemplates/datainterfaces/.docstrings/i_pingdatainterfaceperfile.doc.hpp',
  'filetemplates/datatypes/datagraminfo.hpp',
  'filetemplates/datatypes/filecache.hpp',
  'filetemplates/datatypes/i_ping.hpp',
  'filetemplates/datatypes/i_pingbottom.hpp',
  'filetemplates/datatypes/i_pingcommon.hpp',
  'filetemplates/datatypes/i_pingfiledata.hpp',
  'filetemplates/datatypes/i_pingwatercolumn.hpp',
  'filetemplates/datatypes/cache_structures/fileinfos.hpp',
  'filetemplates/datatypes/cache_structures/filepackagecache.hpp',
  'filetemplates/datatypes/cache_structures/filepackageindex.hpp',
  'filetemplates/datatypes/cache_structures/packagecache.hpp',
  'filetemplates/datatypes/cache_structures/tuplepackage.hpp',
  'filetemplates/datatypes/cache_structures/.docstrings/fileinfos.doc.hpp',
  'filetemplates/datatypes/cache_structures/.docstrings/filepackagecache.doc.hpp',
  'filetemplates/datatypes/cache_structures/.docstrings/filepackageindex.doc.hpp',
  'filetemplates/datatypes/cache_structures/.docstrings/packagecache.doc.hpp',
  'filetemplates/datatypes/cache_structures/.docstrings/tuplepackage.doc.hpp',
  'filetemplates/datatypes/.docstrings/datagraminfo.doc.hpp',
  'filetemplates/datatypes/.docstrings/filecache.doc.hpp',
  'filetemplates/datatypes/.docstrings/i_filecache.doc.hpp',
  'filetemplates/datatypes/.docstrings/i_ping.doc.hpp',
  'filetemplates/datatypes/.docstrings/i_pingbottom.doc.hpp',
  'filetemplates/datatypes/.docstrings/i_pingcommon.doc.hpp',
  'filetemplates/datatypes/.docstrings/i_pingfiledata.doc.hpp',
  'filetemplates/datatypes/.docstrings/i_pingwatercolumn.doc.hpp',
  'pingtools/beamsampleselection.hpp',
  'pingtools/beamselection.hpp',
  'pingtools/pingsampleselector.hpp',
  'pingtools/readsamplerange.hpp',
  'pingtools/.docstrings/beamsampleselection.doc.hpp',
  'pingtools/.docstrings/beamselection.doc.hpp',
  'pingtools/.docstrings/pingsampleselector.doc.hpp',
  'pingtools/.docstrings/readsamplerange.doc.hpp',
]

# -- targets --
# for now force static linking on windows
if build_machine.system() != 'linux'
  echosounders_lib = static_library(libname,sources,
                        dependencies : [
                          boost_dep, 
                          omp_dep,
                          pugixml_dep,
                          tools_dep,
                          navigation_dep,
                          algorithms_dep
                          ],
                          # cpp_pch : 'pch/pch.hpp',
                        override_options: [
                          'b_lundef=false'
                      ],
                        install : true, 
                        install_tag : 'library'
                        )
else  
  echosounders_lib = library(libname,sources,
                        dependencies : [
                          boost_dep, 
                          omp_dep,
                          pugixml_dep,
                          tools_dep,
                          navigation_dep,
                          algorithms_dep
                          ],
                          # cpp_pch : 'pch/pch.hpp',
                        override_options: [
                          'b_lundef=false'
                      ],
                        install : true, 
                        install_tag : 'library'
                        )
endif
                      

# -- internal dependency --
echosounders_dep = declare_dependency(
  dependencies : [
    boost_dep,
    omp_dep,
    pugixml_dep,
    tools_dep,
    navigation_dep,
    algorithms_dep
  ],
  link_with : [echosounders_lib],
  include_directories : ['../../']
  )


# -- installation setup --

# install headers
if headers != ['']
    install_headers(headers, subdir: headerdir+'/', preserve_path: true)
endif

# create pkgconfig file
pkg = import('pkgconfig')
pkg.generate(echosounders_lib,
             description : 'Library for reading, writing and processing single- and multibeam echsounder data formats.',
             url : 'https://github.com/themachinethatgoesping/echosounders')
